# eAsistent-testi

./: README.md  pyproject.toml
easistent_testi/: core.py
examples/: discord.py
src/: __init__.py  api.py
