[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eAsistent-testi"
version = "0.0.1"
authors = [
  { name="Oton", email="otonbenda@gmail.com" },
]
description = "Še en strgalec eAsistenta, tokrat za prihajajoče teste"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4"
]

[project.urls]
Homepage = "https://github.com/kuhanaklobasa/eAsistent-testi"
Issues = "https://github.com/kuhanaklobasa/eAsistent-testi/issues"